2024R2_Test/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md
# `ControlType`



#### *class* ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlType

Bases: [`enum.Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

To select the mesh workflow control type.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Attributes

| Name |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [`ZoneMaterialAssignment`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.ZoneMaterialAssignment) |
| [`Checkpoint`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.Checkpoint) |
| [`PartEnclosure`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.PartEnclosure) |
| [`IrregularShapeConvexEnclosure`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.IrregularShapeConvexEnclosure) |
| [`SphericalEnclosure`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.SphericalEnclosure) |
| [`CustomNamesEnclosure`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.CustomNamesEnclosure) |
| [`TopologyCreation`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.TopologyCreation) |
| [`Extrusion`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.Extrusion) |
| [`CustomNamesExtrusion`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.CustomNamesExtrusion) |
| [`HoleFilling`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.HoleFilling) |
| [`ImproveSurfaceMeshSecondOrderConversion`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.ImproveSurfaceMeshSecondOrderConversion) |
| [`ImproveVolumeMeshAutoNodeMove`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.ImproveVolumeMeshAutoNodeMove) |
| [`ImproveVolumeMeshSecondOrderConversion`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.ImproveVolumeMeshSecondOrderConversion) |
| [`MaterialPoint`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.MaterialPoint) |
| [`VolumesMerging`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.VolumesMerging) |
| [`MeshImport`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.MeshImport) |
| [`ConstantSizeSurfaceMesh`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.ConstantSizeSurfaceMesh) |
| [`WrapSpecificSurfaceMesh`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.WrapSpecificSurfaceMesh) |
| [`ConstantSizeVolumeMesh`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.ConstantSizeVolumeMesh) |
| [`ConstantSizeWrap`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.ConstantSizeWrap) |
| [`CustomNamesWrap`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.CustomNamesWrap) |
| [`MeshExport`](../../../../../../v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md#ControlType.MeshExport) |

<a id="attribute-detail"></a>

## Attribute detail

<a id="ControlType.ZoneMaterialAssignment"></a>

### ControlType.ZoneMaterialAssignment *= 13*

<a id="ControlType.Checkpoint"></a>

### ControlType.Checkpoint *= 3*

<a id="ControlType.PartEnclosure"></a>

### ControlType.PartEnclosure *= 7*

<a id="ControlType.IrregularShapeConvexEnclosure"></a>

### ControlType.IrregularShapeConvexEnclosure *= 11*

<a id="ControlType.SphericalEnclosure"></a>

### ControlType.SphericalEnclosure *= 8*

<a id="ControlType.CustomNamesEnclosure"></a>

### ControlType.CustomNamesEnclosure *= 12*

<a id="ControlType.TopologyCreation"></a>

### ControlType.TopologyCreation *= 16*

<a id="ControlType.Extrusion"></a>

### ControlType.Extrusion *= 21*

<a id="ControlType.CustomNamesExtrusion"></a>

### ControlType.CustomNamesExtrusion *= 22*

<a id="ControlType.HoleFilling"></a>

### ControlType.HoleFilling *= 23*

<a id="ControlType.ImproveSurfaceMeshSecondOrderConversion"></a>

### ControlType.ImproveSurfaceMeshSecondOrderConversion *= 48*

<a id="ControlType.ImproveVolumeMeshAutoNodeMove"></a>

### ControlType.ImproveVolumeMeshAutoNodeMove *= 49*

<a id="ControlType.ImproveVolumeMeshSecondOrderConversion"></a>

### ControlType.ImproveVolumeMeshSecondOrderConversion *= 50*

<a id="ControlType.MaterialPoint"></a>

### ControlType.MaterialPoint *= 55*

<a id="ControlType.VolumesMerging"></a>

### ControlType.VolumesMerging *= 24*

<a id="ControlType.MeshImport"></a>

### ControlType.MeshImport *= 4*

<a id="ControlType.ConstantSizeSurfaceMesh"></a>

### ControlType.ConstantSizeSurfaceMesh *= 41*

<a id="ControlType.WrapSpecificSurfaceMesh"></a>

### ControlType.WrapSpecificSurfaceMesh *= 43*

<a id="ControlType.ConstantSizeVolumeMesh"></a>

### ControlType.ConstantSizeVolumeMesh *= 47*

<a id="ControlType.ConstantSizeWrap"></a>

### ControlType.ConstantSizeWrap *= 51*

<a id="ControlType.CustomNamesWrap"></a>

### ControlType.CustomNamesWrap *= 53*

<a id="ControlType.MeshExport"></a>

### ControlType.MeshExport *= 5*


