2024R2_Test/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ControlType.md
# `ControlType`

<a id="ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlType"></a>

#### *class* ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ControlType

Bases: [`enum.Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

To select the mesh workflow control type.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Attributes

| Name |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [`Checkpoint`](#ControlType.Checkpoint) |
| [`ConstantSizeSurfaceMesh`](#ControlType.ConstantSizeSurfaceMesh) |
| [`ConstantSizeVolumeMesh`](#ControlType.ConstantSizeVolumeMesh) |
| [`ConstantSizeWrap`](#ControlType.ConstantSizeWrap) |
| [`CustomNamesEnclosure`](#ControlType.CustomNamesEnclosure) |
| [`CustomNamesExtrusion`](#ControlType.CustomNamesExtrusion) |
| [`CustomNamesWrap`](#ControlType.CustomNamesWrap) |
| [`Extrusion`](#ControlType.Extrusion) |
| [`HemisphereEnclosure`](#ControlType.HemisphereEnclosure) |
| [`HoleFilling`](#ControlType.HoleFilling) |
| [`HolePatching`](#ControlType.HolePatching) |
| [`ImproveSurfaceMeshSecondOrderConversion`](#ControlType.ImproveSurfaceMeshSecondOrderConversion) |
| [`ImproveVolumeMeshAutoNodeMove`](#ControlType.ImproveVolumeMeshAutoNodeMove) |
| [`ImproveVolumeMeshSecondOrderConversion`](#ControlType.ImproveVolumeMeshSecondOrderConversion) |
| [`IrregularShapeConvexEnclosure`](#ControlType.IrregularShapeConvexEnclosure) |
| [`IrregularShapeHemiConvexEnclosure`](#ControlType.IrregularShapeHemiConvexEnclosure) |
| [`MaterialPoint`](#ControlType.MaterialPoint) |
| [`MeshExport`](#ControlType.MeshExport) |
| [`MeshImport`](#ControlType.MeshImport) |
| [`PartEnclosure`](#ControlType.PartEnclosure) |
| [`PartsMerging`](#ControlType.PartsMerging) |
| [`SizeFieldWrap`](#ControlType.SizeFieldWrap) |
| [`SphericalEnclosure`](#ControlType.SphericalEnclosure) |
| [`TopologyCreation`](#ControlType.TopologyCreation) |
| [`VolumesMerging`](#ControlType.VolumesMerging) |
| [`WrapSpecificSurfaceMesh`](#ControlType.WrapSpecificSurfaceMesh) |
| [`ZoneMaterialAssignment`](#ControlType.ZoneMaterialAssignment) |
| [`ZoneThicknessAssignment`](#ControlType.ZoneThicknessAssignment) |

<a id="attribute-detail"></a>

## Attribute detail

<a id="ControlType.Checkpoint"></a>

### ControlType.Checkpoint *= 3*

<a id="ControlType.ConstantSizeSurfaceMesh"></a>

### ControlType.ConstantSizeSurfaceMesh *= 48*

<a id="ControlType.ConstantSizeVolumeMesh"></a>

### ControlType.ConstantSizeVolumeMesh *= 54*

<a id="ControlType.ConstantSizeWrap"></a>

### ControlType.ConstantSizeWrap *= 61*

<a id="ControlType.CustomNamesEnclosure"></a>

### ControlType.CustomNamesEnclosure *= 14*

<a id="ControlType.CustomNamesExtrusion"></a>

### ControlType.CustomNamesExtrusion *= 28*

<a id="ControlType.CustomNamesWrap"></a>

### ControlType.CustomNamesWrap *= 64*

<a id="ControlType.Extrusion"></a>

### ControlType.Extrusion *= 27*

<a id="ControlType.HemisphereEnclosure"></a>

### ControlType.HemisphereEnclosure *= 9*

<a id="ControlType.HoleFilling"></a>

### ControlType.HoleFilling *= 29*

<a id="ControlType.HolePatching"></a>

### ControlType.HolePatching *= 30*

<a id="ControlType.ImproveSurfaceMeshSecondOrderConversion"></a>

### ControlType.ImproveSurfaceMeshSecondOrderConversion *= 58*

<a id="ControlType.ImproveVolumeMeshAutoNodeMove"></a>

### ControlType.ImproveVolumeMeshAutoNodeMove *= 59*

<a id="ControlType.ImproveVolumeMeshSecondOrderConversion"></a>

### ControlType.ImproveVolumeMeshSecondOrderConversion *= 60*

<a id="ControlType.IrregularShapeConvexEnclosure"></a>

### ControlType.IrregularShapeConvexEnclosure *= 12*

<a id="ControlType.IrregularShapeHemiConvexEnclosure"></a>

### ControlType.IrregularShapeHemiConvexEnclosure *= 13*

<a id="ControlType.MaterialPoint"></a>

### ControlType.MaterialPoint *= 66*

<a id="ControlType.MeshExport"></a>

### ControlType.MeshExport *= 5*

<a id="ControlType.MeshImport"></a>

### ControlType.MeshImport *= 4*

<a id="ControlType.PartEnclosure"></a>

### ControlType.PartEnclosure *= 7*

<a id="ControlType.PartsMerging"></a>

### ControlType.PartsMerging *= 81*

<a id="ControlType.SizeFieldWrap"></a>

### ControlType.SizeFieldWrap *= 63*

<a id="ControlType.SphericalEnclosure"></a>

### ControlType.SphericalEnclosure *= 8*

<a id="ControlType.TopologyCreation"></a>

### ControlType.TopologyCreation *= 20*

<a id="ControlType.VolumesMerging"></a>

### ControlType.VolumesMerging *= 31*

<a id="ControlType.WrapSpecificSurfaceMesh"></a>

### ControlType.WrapSpecificSurfaceMesh *= 50*

<a id="ControlType.ZoneMaterialAssignment"></a>

### ControlType.ZoneMaterialAssignment *= 15*

<a id="ControlType.ZoneThicknessAssignment"></a>

### ControlType.ZoneThicknessAssignment *= 16*


